# accurecord-test

./: Makefile  README.md  data.json  docker-compose.yml  pyproject.toml
.github/workflows/: image-builder-dev.yml
database/: schema.sql
podman/backend/: Dockerfile
src/accurecord_test/: __init__.py  background.py  common.py  database.py  settings.py  web.py
tests/: conftest.py  test_background.py  test_web.py
